<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <com.laxiong.View.CommonActionBar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        custom:bgcolor="@color/title_grey"
        custom:textcolor="@color/white"
        custom:textsize="17sp"
        custom:text="@string/welfare_explain_title"
        android:layout_height="44dp"></com.laxiong.View.CommonActionBar>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            style="@style/commontext"
            android:textColor="@color/maintext_grey"
            android:text="@string/welfare_explain"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="22dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:paddingTop="10dp"
            android:textColor="@color/futext_grey"
            android:text="@string/earning_string"
            />
    </LinearLayout>
</LinearLayout>
